# ai-newsletter-generator

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
.github/skills/newsletter-blueprint/: SKILL.md
src/newsletter/: __init__.py  config.py  llm.py  models.py  news_service.py  orchestrator.py  render.py
